components/c1/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels: 
    app.kubernetes.io/instance: c1
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name:  c1
    app.kubernetes.io/part-of: tad-bootstrap
  name: c1
  namespace: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance:  c1 
  template:
    metadata: 
      labels:
        app.kubernetes.io/instance:  c1
    spec:
      containers:
      - image: 
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        name: container-image
        ports:
        - containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: 8080
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 50Mi
