components/c1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels: 
    app.kubernetes.io/instance: c1
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: c1 
  name: c1
  namespace: 
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: c1
