components/c1/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels: 
    app.kubernetes.io/instance: c1
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: c1 
  name: c1
  namespace: 
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: c1
    weight: 100
status: {}
